--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>Get In Touch</h2>
       <h3>If you like chicken as much as I do.</h3>
       <p class="contact-message">You can go to my socials or email and contact me, will try to reply you all.</p>
-      <a class="btn" href="mailto:dkachari777@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:dkachari777@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
