--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.instagram.com/dkachari7/">Instagram</a>
+    <a class="footer-link" href="https://www.instagram.com/dkacharii/">Instagram</a>
     <a class="footer-link" href="https://twitter.com/dkachari3/">Twitter</a>
     <p class="copyright">© 2022 Debojit.</p>
   </div>
