--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="skill-row">
         <img class="batminton-img" src="images/batminton.png" alt="batminton-img">
         <h3>Sports</h3>
-        <p>A part time <b>batminton</b> player. I feel attracted towards this sport and it give me happiness.</p>
+        <p>A part time <b>badminton</b> player. I feel attracted towards this sport and it give me happiness.</p>
       </div>
       <div class="skill-row">
         <img class="art-img" src="images/art.gif" alt="art-img">
