--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.instagram.com/dkchrii/">Instagram</a>
-    <a class="footer-link" href="https://twitter.com/dkachari3/">Twitter</a>
+    <a class="footer-link" href="/">Twitter</a>
     <p class="copyright">© 2022 Debojit.</p>
   </div>
 
